--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "material-ui-search-bar": "^1.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
