--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@types/node": "^16.11.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/react-icons": "^3.0.0",
+    "@types/styled-components": "^5.1.25",
     "material-ui-pagination": "^1.1.6",
     "material-ui-search-bar": "^1.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-native-modal-dropdown": "^1.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
