--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
-    "@types/node": "^16.11.35",
+    "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.25",
+    "awesome-typescript-loader": "^5.2.1",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "material-ui-pagination": "^1.1.6",
     "material-ui-search-bar": "^1.0.0",
@@ -28,7 +30,9 @@
     "react-native-modal-dropdown": "^1.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "source-map-loader": "^3.0.1",
     "styled-components": "^5.3.5",
+    "ts-import": "^3.0.0-beta.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
