--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
+    "imer": "^0.0.1",
+    "immer": "^9.0.14",
     "material-ui-pagination": "^1.1.6",
     "material-ui-search-bar": "^1.0.0",
     "react": "^18.1.0",
@@ -30,6 +33,7 @@
     "react-native-modal-dropdown": "^1.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "shortid": "^2.2.16",
     "source-map-loader": "^3.0.1",
     "styled-components": "^5.3.5",
     "ts-import": "^3.0.0-beta.1",
