--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@types/react-icons": "^3.0.0",
+    "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.25",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.27.2",
