--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
+    "@types/leaflet": "^1.7.10",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
@@ -22,10 +23,13 @@
     "@types/styled-components": "^5.1.25",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "imer": "^0.0.1",
     "immer": "^9.0.14",
+    "leaflet": "^1.8.0",
+    "leaflet-draw": "^1.0.4",
     "material-ui-pagination": "^1.1.6",
     "material-ui-search-bar": "^1.0.0",
     "react": "^18.1.0",
@@ -33,6 +37,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-leaflet": "^4.0.0",
+    "react-leaflet-draw": "^0.19.8",
     "react-native-modal-dropdown": "^1.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
